--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,11 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:support-v4:25.1.1'
-    compile 'com.android.support:cardview-v7:25.1.1'
-    compile 'com.android.support:recyclerview-v7:25.1.1'
+//    compile 'com.android.support:cardview-v7:25.1.1'
+//    compile 'com.android.support:recyclerview-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
+
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
 
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.1@aar'
